--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>EJS compilation demo</title>
+    <title>All todos</title>
     <style></style>
   </head>
   <body>
+    <% function todoView(todo, i) { %>
+      <div>
+        <h3><%=todo.text %></h3>
+        <h4>Priority: <%=todo.priority %></h4>
+        <h6>Tags: <%=todo.tags %></h4>
+      </div>
+
+      <% } %>
+      <% function createTodo(req) { %>
+
+        <% } %>
+    <a href="/">Go back</a>
     <h1>Todos.ejs</h1>
+    <a href="/create">Create Todo</a>
+    <% todos.map(todoView) %>
   </body>
 </html>
